chore: fixes spacing for about section

--- a/app/styles/components/_info-tag.scss
+++ b/app/styles/components/_info-tag.scss
@@ -1,5 +1,5 @@
 .info-tag-container {
-  margin-bottom: spacing(1);
+  margin-bottom: spacing(2);
   display: flex;
   align-items: center;
   justify-content: space-between;
